--- a/haval-h6-mqtt/config.json
+++ b/haval-h6-mqtt/config.json
@@ -1,6 +1,6 @@
 {
   "name": "GWM Brasil com MQTT",
-  "version": "0.0.21",
+  "version": "1.0.1",
   "slug": "hassio_haval_h6_to_mqtt",
   "description": "Integração com o Home Assistant usando MQTT para veículos GWM.",
   "init": false,
@@ -21,6 +21,9 @@
     "mqtt_user": "str?",
     "mqtt_pass": "password?",
     "refresh_time": "int",
+    "openai_token": "password?",
+    "gemini_token": "password?",
+    "geocode_api_key": "password?",
     "device_tracker_enabled": "bool"
   }
 }
