--- a/haval-h6-mqtt/files/HomeAssistant_Dashboard_GWM.yaml
+++ b/haval-h6-mqtt/files/HomeAssistant_Dashboard_GWM.yaml
@@ -982,7 +982,7 @@ views:
               show_icon: true
               tap_action:
                 action: navigate
-                navigation_path: /gwm-brasil/controles
+                navigation_path: controles
               card_mod:
                 style: |
                   ha-card {
