--- a/.gitignore
+++ b/.gitignore
@@ -132,10 +132,10 @@ dist
 
 storage
 
-localTest.js
+localTest*.js
 get_images.js
 haval_h6
 haval_h6gt
 body.json
 *.ori.js
-gwmbrasil_automation_blueprint.yaml
+*blueprint.yaml
