--- a/haval-h6-mqtt/Dockerfile
+++ b/haval-h6-mqtt/Dockerfile
@@ -1,16 +1,16 @@
 ARG BUILD_FROM
 FROM $BUILD_FROM
 
-ENV LANG C.UTF-8
+ENV LANG=C.UTF-8
 
 WORKDIR /app
 
-RUN apk add --no-cache nodejs
+RUN apk add --no-cache nodejs npm
 
 COPY . /app
 
 RUN npm install --omit=dev
 
-RUN chmod +x /run.sh
+RUN chmod +x run.sh
 
-CMD [ "/run.sh" ]
+CMD [ "/app/run.sh" ]
